# shannon-prime-comfyui

./: .gitignore  FUTURE-WORK-V5.md  README.md  __init__.py  pyproject.toml
docs/: INTEGRATION.md  NODES.md  ORACLE.md  WORKFLOWS.md
nodes/: __init__.py  shannon_prime_audio_nodes.py  shannon_prime_flux_nodes.py  shannon_prime_nodes.py
scripts/: launch_with_control.ps1  sp_ablation.py  sp_control_panel.py
web/: sp_cleanup_hook.js
workflows/: wan22_t2v_hilow.json  wan22_ti2v_5b_phase12_ship.json  wan22_ti2v_5b_phase13.json
